--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
 
     <div>
-        <a href="/">Home Page</a>
+        <a href="/" class="text-xs text-black font-bold">Home Page</a>
 
         <a href="#">Subscribe for Updates</a>
     </div>
