--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                                 Do not be angry with the pain in the 
                                 rebuke in the pleasure he wants to be a hair
                                  from the pain in the hope that there is no breeding.
-                                                            </p>
+                            </p>
                         </div>
 
                         <footer class="flex justify-between items-center mt-8">
@@ -146,7 +146,7 @@
                                 <img src="./img/lary-avatar.svg" alt="Lary avatar">
                                 <div class="ml-3">
                                     <h5 class="font-bold">Patrick Wilson</h5>
-                                    <h6>Programmer</h6>
+                                    <h6>Software Engineer</h6>
                                 </div>
                             </div>
 
@@ -173,11 +173,11 @@
                                 <div class="space-x-2">
                                     <a href="#"
                                        class="px-3 py-1 border border-blue-300 rounded-full text-blue-300 text-xs uppercase font-semibold"
-                                       style="font-size: 10px">Techniques</a>
+                                       style="font-size: 10px">Ability</a>
 
                                     <a href="#"
                                        class="px-3 py-1 border border-red-300 rounded-full text-red-300 text-xs uppercase font-semibold"
-                                       style="font-size: 10px">Updates</a>
+                                       style="font-size: 10px">Upgrade</a>
                                 </div>
 
                                 <div class="mt-4">
@@ -212,7 +212,7 @@
                                 <div class="flex items-center text-sm">
                                     <img src="./img/lary-avatar.svg" alt="Lary avatar">
                                     <div class="ml-3">
-                                        <h5 class="font-bold">Patrick Wilson</h5>
+                                        <h5 class="font-bold">Patrick Yaw</h5>
                                         <h6>Programmer</h6>
                                     </div>
                                 </div>
@@ -278,7 +278,7 @@
                                 <div class="flex items-center text-sm">
                                     <img src="./img/lary-avatar.svg" alt="Lary avatar">
                                     <div class="ml-3">
-                                        <h5 class="font-bold">Patrick Wilson</h5>
+                                        <h5 class="font-bold">Yaw Afriyie</h5>
                                         <h6>Programmer</h6>
                                     </div>
                                 </div>
@@ -346,7 +346,7 @@
                                 <div class="flex items-center text-sm">
                                     <img src="./img/lary-avatar.svg" alt="Lary avatar">
                                     <div class="ml-3">
-                                        <h5 class="font-bold">Yaw Afriyie</h5>
+                                        <h5 class="font-bold">Patrick Afriyie</h5>
                                         <h6>Programmer</h6>
                                     </div>
                                 </div>
@@ -411,7 +411,7 @@
                                 <div class="flex items-center text-sm">
                                     <img src="./img/lary-avatar.svg" alt="Lary avatar">
                                     <div class="ml-3">
-                                        <h5 class="font-bold">Patrick Wilson</h5>
+                                        <h5 class="font-bold">Afriyie Wilson</h5>
                                         <h6>Programmer</h6>
                                     </div>
                                 </div>
@@ -477,7 +477,7 @@
                                 <div class="flex items-center text-sm">
                                     <img src="./img/lary-avatar.svg" alt="Lary avatar">
                                     <div class="ml-3">
-                                        <h5 class="font-bold">Patrick Wilson</h5>
+                                        <h5 class="font-bold">Wilson Junior</h5>
                                         <h6>Programmer</h6>
                                     </div>
                                 </div>
@@ -499,7 +499,7 @@
         <footer class="bg-gray-100 border border-black border-opacity-5 rounded-xl text-center py-16 px-10 mt-16">
             <img src="./img/lary-newsletter-icon.svg" alt="" class="mx-auto -mb-6" style="width: 145px;">
             <h5 class="text-3xl">Stay in touch with the latest posts</h5>
-            <p class="text-sm mt-3">Promise to keep the inbox clean. No bugs.</p>
+            <p class="text-sm mt-3">Promise to keep the inbox clean. No bugs. <br>@Patrick Afriyie Wilson</p>
 
             <div class="mt-10">
                 <div class="relative inline-block mx-auto lg:bg-gray-200 rounded-full">
